# os-monitor

./: .gitignore  README.md  app.py  main.py  packages.txt  pyproject.toml
src/: constants.py  main.py  structures.py  utils.py
src/components/: cpu.py  gpu.py  memory.py  sensors.py
src/components/ui/: card.py  charts.py  gpu.py  progress_bar.py  sensors.py
src/routers/: health_check.py  system.py
src/services/: system_info.py
