[project]
name = "os-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "ruff>=0.15.0",
    "streamlit>=1.54.0",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
