[project]
name = "os-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "psutil>=7.2.2",
    "pyamdgpuinfo>=2.1.7",
    "streamlit>=1.54.0",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
